2017-02-23  Mark Lam  <mark.lam@apple.com>

        Ensure that the end of the last invalidation point does not extend beyond the end of the buffer.
        https://bugs.webkit.org/show_bug.cgi?id=168786

        Reviewed by Filip Pizlo.

        In practice, we will always have multiple instructions after invalidation points,
        and have enough room in the JIT buffer for the invalidation point to work with.
        However, as a precaution, we can guarantee that there's enough room by always
        emitting a label just before we link the buffer.  The label will emit nop padding
        if needed.

        * assembler/LinkBuffer.cpp:
        (JSC::LinkBuffer::linkCode):

2017-02-23  Keith Miller  <keith_miller@apple.com>

        Unreviewed, fix the cloop build. Needed a #if.

        * jit/ExecutableAllocator.cpp:

2017-02-22  Carlos Garcia Campos  <cgarcia@igalia.com>

        Better handle Thread and RunLoop initialization
        https://bugs.webkit.org/show_bug.cgi?id=167828

        Reviewed by Yusuke Suzuki.

        * runtime/InitializeThreading.cpp:
        (JSC::initializeThreading): Do not initialize double_conversion, that is already initialized by WTF, and GC
        threads that will be initialized by WTF main thread when needed.

2017-02-22  Keith Miller  <keith_miller@apple.com>

        Remove the demand executable allocator
        https://bugs.webkit.org/show_bug.cgi?id=168754

        Reviewed by Saam Barati.

        We currently only use the demand executable allocator for non-iOS 32-bit platforms.
        Benchmark results on a MBP indicate there is no appreciable performance difference
        between a the fixed and demand allocators. In a future patch I will go back through
        this code and remove more of the abstractions.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * jit/ExecutableAllocator.cpp:
        (JSC::FixedVMPoolExecutableAllocator::FixedVMPoolExecutableAllocator):