@@ -1,3 +1,13 @@
+2017-02-23  Filip Pizlo  <fpizlo@apple.com>
+
+        SpeculativeJIT::compilePutByValForIntTypedArray should only do the constant-folding optimization when the constant passes the type check
+        https://bugs.webkit.org/show_bug.cgi?id=168787
+
+        Reviewed by Michael Saboff and Mark Lam.
+
+        * dfg/DFGSpeculativeJIT.cpp:
+        (JSC::DFG::SpeculativeJIT::compilePutByValForIntTypedArray):
+
 2017-02-23  Mark Lam  <mark.lam@apple.com>
 
         Ensure that the end of the last invalidation point does not extend beyond the end of the buffer.
